[workspace]
members = ["modules/*", "primitives/*", "runtime-common"]

[workspace.dependencies]
# crates.io
bitvec                = { version = "1", default-features = false, features = ["alloc"] }
codec                 = { package = "parity-scale-codec", version = "3.3", default-features = false, features = ["derive"] }
finality-grandpa      = { version = "0.16", default-features = false }
hash-db               = { version = "0.15", default-features = false }
hex                   = { version = "0.4" }
hex-literal           = { version = "0.3" }
impl-trait-for-tuples = { version = "0.2" }
log                   = { version = "0.4", default-features = false }
num-traits            = { version = "0.2", default-features = false }
parity-util-mem       = { version = "0.12", default-features = false }
scale-info            = { version = "2.3", default-features = false, features = ["derive"] }
serde                 = { version = "1.0" }
static_assertions     = { version = "1.1" }
trie-db               = { version = "0.24", default-features = false }

# darwinia
bp-header-chain          = { default-features = false, path = "primitives/header-chain" }
bp-message-dispatch      = { default-features = false, path = "primitives/message-dispatch" }
bp-messages              = { default-features = false, path = "primitives/messages" }
bp-parachains            = { default-features = false, path = "primitives/parachains" }
bp-polkadot-core         = { default-features = false, path = "primitives/polkadot-core" }
bp-runtime               = { default-features = false, path = "primitives/runtime" }
bp-test-utils            = { default-features = false, path = "primitives/test-utils" }
pallet-bridge-dispatch   = { default-features = false, path = "modules/dispatch" }
pallet-bridge-grandpa    = { default-features = false, path = "modules/grandpa" }
pallet-bridge-messages   = { default-features = false, path = "modules/messages" }
pallet-bridge-parachains = { default-features = false, path = "modules/parachains" }
pallet-fee-market        = { default-features = false, path = "modules/fee-market" }

# moonbeam
account = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.38" }

# substrate
frame-benchmarking         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-support              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-system               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-balances            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-root-testing        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-timestamp           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-utility             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-api                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-application-crypto      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-finality-grandpa        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-state-machine           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-trie                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-version                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# polkadot
pallet-xcm   = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
xcm          = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
xcm-builder  = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
xcm-executor = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
