[workspace]
members = [
	"modules/*",
	"primitives/*",
	"runtime-common",
]

[workspace.dependencies]
# crates.io
array-bytes      = { version = "6.1" }
bitvec           = { version = "1.0", default-features = false, features = ["alloc"] }
codec            = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
finality-grandpa = { version = "0.16", default-features = false }
hash-db          = { version = "0.16", default-features = false }
log              = { version = "0.4" }
num-traits       = { version = "0.2", default-features = false }
scale-info       = { version = "2.10", default-features = false, features = ["derive"] }
serde            = { version = "1.0", default-features = false }
trie-db          = { version = "0.28", default-features = false }

# darwinia
bp-header-chain          = { path = "primitives/header-chain", default-features = false }
bp-message-dispatch      = { path = "primitives/message-dispatch", default-features = false }
bp-messages              = { path = "primitives/messages", default-features = false }
bp-parachains            = { path = "primitives/parachains", default-features = false }
bp-polkadot-core         = { path = "primitives/polkadot-core", default-features = false }
bp-runtime               = { path = "primitives/runtime", default-features = false }
bp-test-utils            = { path = "primitives/test-utils", default-features = false }
pallet-bridge-dispatch   = { path = "modules/dispatch", default-features = false }
pallet-bridge-grandpa    = { path = "modules/grandpa", default-features = false }
pallet-bridge-messages   = { path = "modules/messages", default-features = false }
pallet-bridge-parachains = { path = "modules/parachains", default-features = false }
pallet-fee-market        = { path = "modules/fee-market", default-features = false }

# frontier
fp-account = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false, features = ["serde"] }

# substrate
frame-benchmarking         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support              = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system               = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances            = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-root-testing        = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-api                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-application-crypto      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-grandpa       = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io                      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-state-machine           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std                     = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-trie                    = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-version                 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
