[package]
authors    = ["Parity Technologies <admin@parity.io>"]
edition    = "2021"
license    = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name       = "bridge-runtime-common"
repository = "https://github.com/paritytech/parity-bridges-common/"
version    = "0.1.0"

[dependencies]
# crates.io
codec             = { package = "parity-scale-codec", workspace = true }
hash-db           = { version = "0.15", default-features = false }
log               = { version = "0.4", default-features = false }
scale-info        = { workspace = true }
static_assertions = { version = "1.1", optional = true }

# darwinia-network
bp-header-chain          = { workspace = true }
bp-messages              = { workspace = true }
bp-parachains            = { workspace = true }
bp-polkadot-core         = { workspace = true }
bp-runtime               = { workspace = true }
pallet-bridge-grandpa    = { workspace = true}
pallet-bridge-messages   = { workspace = true }
pallet-bridge-parachains = { workspace = true }
pallet-fee-market        = { workspace = true }

# paritytech
frame-support              = { workspace = true }
frame-system               = { workspace = true }
pallet-balances            = { workspace = true, optional = true }
sp-api                     = { workspace = true }
sp-core                    = { workspace = true }
sp-io                      = { workspace = true }
sp-runtime                 = { workspace = true }
sp-std                     = { workspace = true }
sp-trie                    = { workspace = true }

# polkadot
pallet-xcm   = { workspace = true }
xcm          = { workspace = true }
xcm-builder  = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
std = [
	# darwinia-network
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-fee-market/std",

	# crates.io
	"codec/std",
	"hash-db/std",
	"log/std",
	"scale-info/std",
	
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",

	# polkadot
	"pallet-xcm/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]

integrity-test = [
	"static_assertions",
]

runtime-benchmarks = [
	"pallet-balances/runtime-benchmarks",
	"pallet-bridge-grandpa/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
