[package]
authors    = ["Parity Technologies <admin@parity.io>"]
edition    = "2021"
license    = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name       = "bridge-runtime-common"
repository = "https://github.com/paritytech/parity-bridges-common/"
version    = "0.1.0"

[dependencies]
# crates.io
codec             = { package = "parity-scale-codec", workspace = true }
hash-db           = { workspace = true }
num-traits        = { workspace = true }
scale-info        = { workspace = true }
static_assertions = { version = "1.1", optional = true }

# darwinia-messages-substrate
bp-header-chain          = { workspace = true }
bp-message-dispatch      = { workspace = true }
bp-messages              = { workspace = true }
bp-parachains            = { workspace = true }
bp-polkadot-core         = { workspace = true }
bp-runtime               = { workspace = true }
pallet-bridge-dispatch   = { workspace = true }
pallet-bridge-grandpa    = { workspace = true }
pallet-bridge-messages   = { workspace = true }
pallet-bridge-parachains = { workspace = true }
pallet-fee-market        = { workspace = true }

# substrate
frame-support              = { workspace = true }
frame-system               = { workspace = true }
pallet-balances            = { workspace = true, optional = true }
pallet-transaction-payment = { workspace = true }
sp-api                     = { workspace = true }
sp-core                    = { workspace = true }
sp-io                      = { workspace = true }
sp-runtime                 = { workspace = true }
sp-state-machine           = { workspace = true, optional = true }
sp-std                     = { workspace = true }
sp-trie                    = { workspace = true }
sp-version                 = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"hash-db/std",
	"num-traits/std",
	"scale-info/std",

	# darwinia-messages-substrate
	"bp-header-chain/std",
	"bp-message-dispatch/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-messages/std",
	"pallet-bridge-parachains/std",
	"pallet-fee-market/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
]

integrity-test = [
	# crates.io
	"static_assertions",
]

runtime-benchmarks = [
	# darwinia-messages-substrate
	"pallet-balances/runtime-benchmarks",
	"pallet-bridge-grandpa/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
]
