[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "storage-proof-fuzzer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec            = { package = "parity-scale-codec", version = "2.0.0" }
env_logger       = "0.8.3"
finality-grandpa = "0.14.0"
hash-db          = "0.15.2"
honggfuzz        = "0.5.54"
log              = "0.4.0"

# Bridge Dependencies

bp-header-chain = { path = "../../primitives/header-chain" }
bp-runtime      = { path = "../../primitives/runtime" }
bp-test-utils   = { path = "../../primitives/test-utils" }

# Substrate Dependencies

frame-support       = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
frame-system        = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-core             = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-finality-grandpa = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-io               = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-runtime          = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-state-machine    = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-std              = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
sp-trie             = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.3" }
