[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "storage-proof-fuzzer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
honggfuzz  = "0.5.54"
log        = "0.4.0"

# Bridge Dependencies

bp-runtime = { path = "../../primitives/runtime" }

# Substrate Dependencies

sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-trie          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
