[package]
name = "pallet-bridge-eth-bsc"
description = "A Substrate Runtime module that is able to verify bsc headers and authority set finality."
version = "0.1.0"
authors = ["Darwinia Network <tianyi.song@itering.com>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"], optional = true }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0", optional = true }
lru-cache = "0.1"
parking_lot = "0.7"
lazy_static = "1.2.0"
time-utils = "0.1.0"
primitive-types = { version = "0.9", default-features = false, features = ["codec", "rlp"] }
parity-crypto = { version = "0.8.0", features = [ "publickey" ] }
rand = "0.7.3"

# Bridge dependencies

bp-bsc = { path = "../../primitives/bsc", default-features = false }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }

[dev-dependencies]
libsecp256k1 = { version = "0.3.4", features = ["hmac"] }
hex-literal = "0.3"

[features]
default = ["std"]
std = [
	"bp-bsc/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitive-types/std",
	"primitive-types/serde",
	"log/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"libsecp256k1",
]
