[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A Substrate Runtime module that dispatches a bridge message, treating it simply as encoded Call"
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-dispatch"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.1", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
# darwinia-network
bp-message-dispatch = { default-features = false, path = "../../primitives/message-dispatch" }
bp-runtime          = { default-features = false, path = "../../primitives/runtime" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
pallet-root-testing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"bp-message-dispatch/std",
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = ["frame-support/try-runtime"]
