[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A Substrate Runtime module that dispatches a bridge message, treating it simply as encoded Call"
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-dispatch"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
log        = { workspace = true }
scale-info = { workspace = true }

# darwinia-messages-substrate
bp-message-dispatch = { workspace = true }
bp-runtime          = { workspace = true }

# substrate
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-core       = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[dev-dependencies]
# substrate
pallet-root-testing = { workspace = true, features = ["std"] }
sp-io               = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# darwinia-messages-substrate
	"bp-message-dispatch/std",
	"bp-runtime/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	# substrate
	"frame-support/try-runtime",
]
