[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Small crate that helps Solidity contract to verify finality proof."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "ethereum-contract-builtin"
version     = "0.1.0"

[dependencies]
codec            = { package = "parity-scale-codec", version = "2.2.0" }
ethereum-types   = "0.12.0"
finality-grandpa = "0.14.0"
hex              = "0.4"
log              = "0.4.14"

# Runtime/chain specific dependencies

rialto-runtime = { path = "../../bin/rialto/runtime" }

# Substrate Dependencies

sc-finality-grandpa = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-blockchain       = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-finality-grandpa = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-runtime          = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

[dev-dependencies]
sp-core = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
