[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "A Substrate Runtime module that is able to verify PoA headers and their finality."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "pallet-bridge-eth-poa"
version     = "0.1.0"

[dependencies]
codec        = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"], optional = true }
log          = { version = "0.4.14", default-features = false }
serde        = { version = "1.0", optional = true }

# Bridge dependencies

bp-eth-poa = { path = "../../primitives/ethereum-poa", default-features = false }

# Substrate Dependencies

frame-benchmarking = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false, optional = true }
frame-support      = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
frame-system       = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
sp-io              = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
sp-runtime         = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }
sp-std             = { git = "https://github.com/darwinia-network/substrate", branch = "main", default-features = false }

[dev-dependencies]
hex-literal  = "0.3"
libsecp256k1 = { version = "0.3.4", features = ["hmac"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"libsecp256k1",
]
std = [
	"bp-eth-poa/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
