[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Fee Market provides suitable fee for message relaying"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "pallet-fee-market"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-bridges-substrate"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# paritytech
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-timestamp   = { workspace = true }
sp-core            = { workspace = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

# darwinia-bridges-substrate
bp-messages            = { workspace = true }
bp-runtime             = { workspace = true }

[dev-dependencies]
bitvec                 = { workspace = true }
pallet-balances        = { workspace = true, features = ["std"] }
pallet-bridge-messages = { workspace = true }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	
	# darwinia-bridges-substrate
	"bp-messages/std",
	"bp-runtime/std",
]

runtime-benchmarks = ["frame-benchmarking"]

try-runtime = ["frame-support/try-runtime"]
