[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Fee Market provides suitable fee for message relaying"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "pallet-fee-market"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-messages-substrate"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }

# darwinia-messages-substrate
bp-messages = { workspace = true }
bp-runtime  = { workspace = true }

# substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-timestamp   = { workspace = true }
sp-core            = { workspace = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
# crates.io
bitvec = { workspace = true }

# darwinia-messages-substrate
pallet-bridge-messages = { workspace = true, features = ["std"] }

# substrate
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",

	# darwinia-messages-substrate
	"bp-messages/std",
	"bp-runtime/std",
]

runtime-benchmarks = [
	# substrate
	"frame-benchmarking",
]

try-runtime = [
	# substrate
	"frame-support/try-runtime",
]
